# showtracker

./: .env  .gitignore  main_gunicorn.py  pyproject.toml  setup.py
db/: db.sqlite.sql
src/showtracker/: api.py  api_blueprint.py  auth.py  db.py  flask_app.py  password_hash.py  sqliteapi.py  web.py
src/showtracker/static/css/: default-f.css  default.css
src/showtracker/static/js/: airdate.js  customdate.js  following.js  operations.js  preprocess_data.js
src/showtracker/templates/: airdate.html  base.html  following.html  import.html  login.html  series_detail.html
src/showtracker/util/: tvmaze.py  tvmaze_import.py  tvmaze_update.py
