[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "veluna-showtracker"
dynamic = ["version"]
authors = [{ name = "Imre NAGY" }]
dependencies = [
    "flask >= 2.2.2",
    "flask-login >= 0.6.2",
    "flask-apscheduler >= 1.12",
    "sqlalchemy >= 2.0.18",
    "python-dotenv >= 0.8"
]
requires-python = ">=3.9"

[tool.setuptools_scm]
version_file = "src/showtracker/VERSION"
version_file_template = "{version}"
